# gb-web

./: .gitignore  Cargo.toml  GEMINI.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.dev.ts  vite.config.ts
.github/workflows/: deploy.yml
app/assets/: fastforwarding.ase  loading.ase
app/roms/: homebrewhub.json  scraper.py
app/src/: App.svelte  Browser.svelte  BrowserPage.svelte  FilePicker.svelte  InputPage.svelte  MainPage.svelte  MenuCheckbox.svelte  MenuSlider.svelte  OptionsPage.svelte  VisualsPage.svelte  app.css  bridge.svelte.ts  db.svelte.ts  input.svelte.ts  main.ts  manager.svelte.ts  options.svelte.ts
core/: Cargo.toml
core/src/: apu.rs  cpu.rs  input.rs  lib.rs  memory.rs  ppu.rs  registers.rs  timer.rs
core/src/cpu/: execution.rs  interrupts.rs  mod.rs  readwrite.rs
debugger/: Cargo.toml
debugger/src/: main.rs
src/: App.svelte  app.css  audio.rs  cpu.rs  lib.rs  options.rs  renderer.rs  shader.wgsl  state.rs
src/cpu/: apu.rs  input.rs  interrupts.rs  memory.rs  ppu.rs  readwrite.rs
wasm/: Cargo.toml
wasm/src/: audio.rs  config.rs  lib.rs  proxy.rs  renderer.rs
wasm/src/assets/: background_definition.toml
wasm/src/renderer/: blur.wgsl  buffers.rs  display.wgsl  final.wgsl  mod.rs
