[package]
name = "DMG-2025"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "2.6.0"
env_logger = "0.11.6"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
puffin = "0.19.1"
puffin_egui = "0.29.0"
rfd = "0.15.2"
rodio = "0.20.1"
serde = {version = "1.0.217", features = ["derive"]}
serde-big-array = "0.5.1"
serde_json = "1.0.137"

console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
log = "0.4"
pollster = "0.4"

[build-dependencies]
winresource = "0.1.19"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
