[package]
name = "dmg_2025_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dmg_2025_core = { path = "../core"}
env_logger = "0.11.6"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
serde = {version = "1.0.217", features = ["derive"]}
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity", "serde"] }
log = "0.4"
pollster = "0.4"
cpal = { version = "0.16.0", features = [ "wasm-bindgen" ] }
ringbuf = "0.4.8"
zip = { version = "6.0.0", default-features = false, features = [ "deflate" ]}
postcard = { version = "1.1.3", features = ["use-std"]}
image = { version = "0.25", default-features = false, features = [ "png" ]}
hash32 = "1.0.0"
tsify = { version = "0.5.6", default-features = false, features = [ "js" ]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
